
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    tools:context=".MainActivity"
    android:transitionGroup="true">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/sensor"
        android:textSize="35sp" />

    <TableLayout
        android:id="@+id/gyroXYZ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:orientation="horizontal"
        android:stretchColumns="1,2,3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="monospace"
                    android:text="@string/x"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvRotationVectorX"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="monospace"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:fontFamily="monospace"
                    android:text="@string/y"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvRotationVectorY"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="monospace"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="3"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="monospace"
                    android:text="@string/z"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvRotationVectorZ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="monospace"
                    android:textSize="20sp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/pbX"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:indeterminate="false"
                android:indeterminateOnly="false"
                android:max="100"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />

            <ProgressBar
                android:id="@+id/pbY"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:indeterminate="false"
                android:indeterminateOnly="false"
                android:max="100"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />

            <ProgressBar
                android:id="@+id/pbZ"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:indeterminate="false"
                android:indeterminateOnly="false"
                android:max="100"
                android:paddingStart="5dp"
                android:paddingEnd="6dp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gyroXYZ"
        android:layout_centerHorizontal="true"
        android:text="@string/android_sensors"
        android:textColor="#ff7aff24"
        android:textSize="35sp"
        tools:ignore="TextContrastCheck" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSubtitle">

        <TextView
            android:id="@+id/tvOutputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="New Text" />
    </ScrollView>

</RelativeLayout>